# the-felt

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wrangler.toml
.claude/: launch.json
integration/: magech-content-the-felt.md
src/the_felt/: __init__.py  cards.py  eval.py  types.py
src/the_felt/agents/: __init__.py  archetype.py  hand_strength.py  policy.py  preflop_charts.py  tag.py  texture.py  villain_range.py
src/the_felt/coach/: __init__.py  analyzer.py  bluffing.py  derivation.py  explain.py  llm_polish.py  narrator.py
src/the_felt/curriculum/: __init__.py  drills.py  lessons.py  mastery.py  stages.py
src/the_felt/engine/: __init__.py  betting.py  hand.py  history.py  sidepots.py  table.py
src/the_felt/equity/: __init__.py  monte_carlo.py
src/the_felt/persistence/: __init__.py  store.py
src/the_felt/probability/: __init__.py  ev.py  mdf.py  outs.py  pot_odds.py
src/the_felt/server/: __init__.py  api_lessons.py  app.py  protocol.py  session.py  ws.py
src/the_felt/skill/: __init__.py  adapter.py  evaluator.py  leak.py  tracker.py
src/the_felt/static/: _headers  app.js  cards.js  engine-ws.js  index.html  styles.css
tests/: test_archetypes.py  test_betting_flow.py  test_curriculum.py  test_equity.py  test_eval.py  test_persistence.py  test_probability.py  test_sidepots.py  test_skill.py  test_stages.py  test_streak.py
tools/: novice_playtest.py  playwright_learner.py
